# nx-cmake

./: DevkitA64Switch.cmake  LICENSE  NintendoSwitch.cmake  README.md  setenv.sh
cmake/: MakeNro.cmake  findLibNX.cmake
example/nx_and_pc/: CMakeLists.txt
example/nx_and_pc/src/: main.c
example/nx_only/: CMakeLists.txt
examples/nx_and_pc/: CMakeLists.txt  README.md
